about to go crazy

--- a/test_trainer.ipynb
+++ b/test_trainer.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "c29cf812",
    "metadata": {},
    "outputs": [],
    "source": [
     "from base_pokemon import *\n",
-    "from trainerai import *"
+    "from trainerai import *\n",
+    "from moves import mov"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "807fd72a",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "712137e4",
    "metadata": {},
    "outputs": [
@@ -39,24 +40,24 @@
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Regidrago \tLv. 100 \tHP: 100.00% \tDragon\n",
-      "[2] Hoothoot \tLv. 100 \tHP: 100.00% \tNormal // Flying\n",
-      "[3] Thievul \tLv. 100 \tHP: 100.00% \tDark\n",
-      "[4] Noctowl \tLv. 100 \tHP: 100.00% \tNormal // Flying\n",
-      "[5] Lickilicky \tLv. 100 \tHP: 100.00% \tNormal\n",
-      "[6] Buzzwole \tLv. 100 \tHP: 100.00% \tBug // Fighting\n",
+      "[1] Regice \tLv. 100 \tHP: 100.00% \tIce\n",
+      "[2] Impidimp \tLv. 100 \tHP: 100.00% \tDark // Fairy\n",
+      "[3] Weedle \tLv. 100 \tHP: 100.00% \tBug // Poison\n",
+      "[4] Carnivine \tLv. 100 \tHP: 100.00% \tGrass\n",
+      "[5] Weavile \tLv. 100 \tHP: 100.00% \tDark // Ice\n",
+      "[6] Lapras \tLv. 100 \tHP: 100.00% \tWater // Ice\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Pupitar \tLv. 100 \tHP: 100.00% \tRock // Ground\n",
-      "[2] Staravia \tLv. 100 \tHP: 100.00% \tNormal // Flying\n",
-      "[3] Drampa \tLv. 100 \tHP: 100.00% \tNormal // Dragon\n",
-      "[4] Avalugg \tLv. 100 \tHP: 100.00% \tIce\n",
-      "[5] Mega-Mewtwo-X \tLv. 100 \tHP: 100.00% \tPsychic // Fighting\n",
-      "[6] Gardevoir \tLv. 100 \tHP: 100.00% \tPsychic // Fairy\n",
+      "[1] Bellsprout \tLv. 100 \tHP: 100.00% \tGrass // Poison\n",
+      "[2] Melmetal \tLv. 100 \tHP: 100.00% \tSteel\n",
+      "[3] Typhlosion \tLv. 100 \tHP: 100.00% \tFire\n",
+      "[4] Poliwag \tLv. 100 \tHP: 100.00% \tWater\n",
+      "[5] Sylveon \tLv. 100 \tHP: 100.00% \tFairy\n",
+      "[6] Slugma \tLv. 100 \tHP: 100.00% \tFire\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n"
      ]
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "5e43a7dd",
    "metadata": {},
    "outputs": [
@@ -77,86 +78,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "switch\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "switch\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "switch\n",
-      "fight\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "switch\n",
-      "switch\n",
-      "fight\n",
-      "fight\n",
-      "switch\n",
-      "fight\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "switch\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "switch\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "fight\n",
-      "switch\n",
-      "fight\n",
-      "29\n",
-      "21\n"
+      "fight fight switch switch switch fight switch fight fight fight switch switch fight fight switch fight fight fight fight fight fight switch fight switch fight switch fight switch fight fight switch fight switch fight switch fight switch fight switch switch fight switch switch switch switch fight fight switch fight switch \n",
+      "27\n",
+      "23\n"
      ]
     }
    ],
    "source": [
-    "p2[0].currenthpp = 19\n",
+    "p2[0].currenthpp = 15\n",
     "f, s = 0,0\n",
     "for i in range(50):\n",
     "    do = redd.fightswitch()\n",
     "    if do=='fight': f+=1\n",
     "    elif do=='switch': s+=1\n",
-    "    print(do)\n",
+    "    print(do,end=' ')\n",
+    "print(\"\")\n",
     "print(f)\n",
     "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9deaf0f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "2.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ede502c3",
+   "id": "bdb8774a",
    "metadata": {},
    "outputs": [
     {
@@ -211,31 +164,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "1d898679",
+   "execution_count": 25,
+   "id": "003cb841",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.0\n",
-      "(70.2, [1.2, 1.3])\n",
+      "0.0\n",
+      "(0.0, [1.2, 1.0])\n",
+      "\n",
+      "120.0\n",
+      "(144.0, [1.2, 1.0])\n",
+      "\n",
+      "30.0\n",
+      "(36.0, [1.2, 1.0])\n",
+      "\n",
+      "110.0\n",
+      "(171.6, [1.2, 1.3])\n",
+      "\n",
+      "80.0\n",
+      "(124.80000000000001, [1.2, 1.3])\n",
       "\n",
       "40.0\n",
-      "(48.0, [1.2, 1.0])\n",
-      "\n",
-      "130.0\n",
-      "(156.0, [1.2, 1.0])\n",
-      "\n",
-      "70.0\n",
-      "(109.2, [1.2, 1.3])\n",
-      "\n",
-      "90.0\n",
-      "(108.0, [1.2, 1.0])\n",
-      "\n",
-      "90.0\n",
-      "(108.0, [1.2, 1.0])\n",
+      "(62.400000000000006, [1.2, 1.3])\n",
       "\n"
      ]
     }
@@ -250,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "8b90fbf5",
+   "execution_count": 24,
+   "id": "cbbc3963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,8 +214,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "ec6a87aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bellsprout\n"
+     ]
+    }
+   ],
+   "source": [
+    "redd.test1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e5bf9f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "###########################  Lapras  ###########################\n",
+      "\n",
+      "Level 100 \tWater // Ice \t(F)\n",
+      "Nature : Modest | Up - SpA, Down - Atk\n",
+      "HP  : \t433.00/433.00 \t100.00%\n",
+      "Atk : \t211.50\n",
+      "Def : \t196.00\n",
+      "Sp.A: \t243.10\n",
+      "Sp.D: \t230.00\n",
+      "Spe : \t151.00\n",
+      "\n",
+      "#######################  Lapras's Moves  #######################\n",
+      "\n",
+      "[1] Mystical Fire\tFire\t10/10 PP\n",
+      "[2] Storm Throw\tFighting\t10/10 PP\n",
+      "[3] Gust\tFlying\t35/35 PP\n",
+      "[4] Water Pulse\tWater\t20/20 PP\n",
+      "[5] Brick Break\tFighting\t15/15 PP\n",
+      "[6] Stomp\tNormal\t20/20 PP\n",
+      "\n",
+      "################################################################\n",
+      "This Pokémon was initialized on\n",
+      "=== Thu 22 Jun 2023 @ 16:38:19 UTC\n",
+      "=== In the MST timezone.\n",
+      "=== It was randomized by Boxes!\n",
+      "################################################################\n"
+     ]
+    }
+   ],
+   "source": [
+    "monn = p1[5]\n",
+    "monn.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "80ed1f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "she = [ mov[monn.knownMoves[i]]['special?'] for i in range(len(monn.knownMoves))]\n",
+    "print(she)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6d109363",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specials = mov[monn.knownMoves]['special?']\n",
+    "speciali = np.argwhere(specials == 2)\n",
+    "print(len(np.squeeze(speciali)))\n",
+    "np.squeeze(np.argwhere(np.logical_or(specials==0,specials==1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bdbe2e9b",
+   "id": "74498309",
    "metadata": {},
    "outputs": [],
    "source": []
