--- a/test_trainer.ipynb
+++ b/test_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "c29cf812",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "807fd72a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "712137e4",
    "metadata": {},
    "outputs": [
@@ -40,24 +40,24 @@
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Regice \tLv. 100 \tHP: 100.00% \tIce\n",
-      "[2] Impidimp \tLv. 100 \tHP: 100.00% \tDark // Fairy\n",
-      "[3] Weedle \tLv. 100 \tHP: 100.00% \tBug // Poison\n",
-      "[4] Carnivine \tLv. 100 \tHP: 100.00% \tGrass\n",
-      "[5] Weavile \tLv. 100 \tHP: 100.00% \tDark // Ice\n",
-      "[6] Lapras \tLv. 100 \tHP: 100.00% \tWater // Ice\n",
+      "[1] Greninja \tLv. 100 \tHP: 100.00% \tWater // Dark\n",
+      "[2] Gossifleur \tLv. 100 \tHP: 100.00% \tGrass\n",
+      "[3] Grimmsnarl \tLv. 100 \tHP: 100.00% \tDark // Fairy\n",
+      "[4] Thievul \tLv. 100 \tHP: 100.00% \tDark\n",
+      "[5] Mesprit \tLv. 100 \tHP: 100.00% \tPsychic\n",
+      "[6] Kangaskhan \tLv. 100 \tHP: 100.00% \tNormal\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Bellsprout \tLv. 100 \tHP: 100.00% \tGrass // Poison\n",
-      "[2] Melmetal \tLv. 100 \tHP: 100.00% \tSteel\n",
-      "[3] Typhlosion \tLv. 100 \tHP: 100.00% \tFire\n",
-      "[4] Poliwag \tLv. 100 \tHP: 100.00% \tWater\n",
-      "[5] Sylveon \tLv. 100 \tHP: 100.00% \tFairy\n",
-      "[6] Slugma \tLv. 100 \tHP: 100.00% \tFire\n",
+      "[1] Tapu Koko \tLv. 100 \tHP: 100.00% \tElectric // Fairy\n",
+      "[2] Glaceon \tLv. 100 \tHP: 100.00% \tIce\n",
+      "[3] Beartic \tLv. 100 \tHP: 100.00% \tIce\n",
+      "[4] Deino \tLv. 100 \tHP: 100.00% \tDark // Dragon\n",
+      "[5] Terrakion \tLv. 100 \tHP: 100.00% \tRock // Fighting\n",
+      "[6] Blastoise \tLv. 100 \tHP: 100.00% \tWater\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n"
      ]
@@ -70,7 +70,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
+   "id": "e3aa712b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hydro Pump\n",
+      "Double-Edge\n",
+      "Double-Edge\n",
+      "Fire Blast\n",
+      "Hydro Pump\n",
+      "Fire Blast\n",
+      "Double-Edge\n",
+      "Fire Blast\n",
+      "Double-Edge\n",
+      "switching\n",
+      "Hydro Pump\n",
+      "Fire Blast\n",
+      "Double-Edge\n",
+      "Double-Edge\n",
+      "Hydro Pump\n",
+      "Double-Edge\n",
+      "Double-Edge\n",
+      "Mystical Fire\n",
+      "Fire Blast\n",
+      "Double-Edge\n",
+      "Double-Edge\n",
+      "Fire Blast\n",
+      "Mystical Fire\n",
+      "Hydro Pump\n",
+      "Hex\n",
+      "Fire Blast\n",
+      "Double-Edge\n",
+      "Double-Edge\n",
+      "switching\n",
+      "Hydro Pump\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(30): redd.go()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "003cb841",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.8\n",
+      "85.8\n",
+      "39.0\n",
+      "144.0\n",
+      "30.0\n",
+      "45.0\n",
+      "0.19972067039106142\n",
+      "0.19972067039106142\n",
+      "0.09078212290502793\n",
+      "0.33519553072625696\n",
+      "0.06983240223463687\n",
+      "0.10474860335195531\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "for i in range(len(p2[0].knownMoves)):\n",
+    "    #print(redd.powerRating(p2[0],p2[0].knownMoves[i],p1[0]))\n",
+    "    we = redd.damageMoveRating(p2[0].knownMoves[i],p2[0],p1[0],debug=False)**1\n",
+    "    print(we)\n",
+    "    l.append(we)\n",
+    "wesum = sum(l)\n",
+    "for i in range(len(l)):\n",
+    "    print(l[i]/wesum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bdb8774a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "#########################  Tapu Koko  ##########################\n",
+      "\n",
+      "Level 100 \tElectric // Fairy \t(F)\n",
+      "Nature : Relaxed | Up - Def, Down - Spe\n",
+      "HP  : \t283.00/283.00 \t100.00%\n",
+      "Atk : \t323.00\n",
+      "Def : \t198.00\n",
+      "Sp.A: \t234.00\n",
+      "Sp.D: \t194.00\n",
+      "Spe : \t266.40\n",
+      "\n",
+      "#####################  Tapu Koko's Moves  ######################\n",
+      "\n",
+      "[1] Fire Blast\tFire\t5/5 PP\n",
+      "[2] Hydro Pump\tWater\t5/5 PP\n",
+      "[3] Hex\tGhost\t10/10 PP\n",
+      "[4] Double-Edge\tNormal\t15/15 PP\n",
+      "[5] Flame Charge\tFire\t20/20 PP\n",
+      "[6] Mystical Fire\tFire\t10/10 PP\n",
+      "\n",
+      "################################################################\n",
+      "This Pokémon was initialized on\n",
+      "=== Fri 23 Jun 2023 @ 17:57:27 UTC\n",
+      "=== In the MST timezone.\n",
+      "=== It was randomized by Boxes!\n",
+      "################################################################\n"
+     ]
+    }
+   ],
+   "source": [
+    "p2[0].summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "5e43a7dd",
    "metadata": {},
    "outputs": [
@@ -78,9 +206,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fight fight switch switch switch fight switch fight fight fight switch switch fight fight switch fight fight fight fight fight fight switch fight switch fight switch fight switch fight fight switch fight switch fight switch fight switch fight switch switch fight switch switch switch switch fight fight switch fight switch \n",
-      "27\n",
-      "23\n"
+      "fight fight fight switch switch fight switch switch fight switch switch fight switch fight fight switch switch switch switch switch fight fight fight fight switch switch fight switch switch switch fight fight fight fight fight fight fight fight fight switch fight switch fight fight switch switch fight fight fight switch \n",
+      "28\n",
+      "22\n"
      ]
     }
    ],
@@ -99,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9deaf0f1",
    "metadata": {},
    "outputs": [
@@ -109,96 +237,13 @@
        "2.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "redd.typeAdvantage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "bdb8774a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "##########################  Pupitar  ###########################\n",
-      "\n",
-      "Level 100 \tRock // Ground \t(F)\n",
-      "Nature : Naive | Up - Spe, Down - SpD\n",
-      "HP  : \t305.00/305.00 \t100.00%\n",
-      "Atk : \t250.00\n",
-      "Def : \t163.00\n",
-      "Sp.A: \t163.00\n",
-      "Sp.D: \t157.50\n",
-      "Spe : \t145.20\n",
-      "\n",
-      "######################  Pupitar's Moves  #######################\n",
-      "\n",
-      "[1] Leaf Blade\tGrass\t15/15 PP\n",
-      "[2] Quick Attack\tNormal\t30/30 PP\n",
-      "[3] Draco Meteor\tDragon\t5/5 PP\n",
-      "[4] Shadow Claw\tGhost\t15/15 PP\n",
-      "[5] Shadow Force\tGhost\t5/5 PP\n",
-      "[6] Dig\tGround\t10/10 PP\n",
-      "\n",
-      "################################################################\n",
-      "This Pokémon was initialized on\n",
-      "=== Thu 22 Jun 2023 @ 00:00:36 UTC\n",
-      "=== In the MST timezone.\n",
-      "=== It was randomized by Boxes!\n",
-      "################################################################\n"
-     ]
-    }
-   ],
-   "source": [
-    "p2[0].summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "003cb841",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "(0.0, [1.2, 1.0])\n",
-      "\n",
-      "120.0\n",
-      "(144.0, [1.2, 1.0])\n",
-      "\n",
-      "30.0\n",
-      "(36.0, [1.2, 1.0])\n",
-      "\n",
-      "110.0\n",
-      "(171.6, [1.2, 1.3])\n",
-      "\n",
-      "80.0\n",
-      "(124.80000000000001, [1.2, 1.3])\n",
-      "\n",
-      "40.0\n",
-      "(62.400000000000006, [1.2, 1.3])\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "for i in range(len(p2[0].knownMoves)):\n",
-    "    print(redd.powerRating(p2[0],p2[0].knownMoves[i],p1[0]))\n",
-    "    print(redd.damageMoveRating(p2[0],p2[0].knownMoves[i],p1[0],debug=True))\n",
-    "    print(\"\")"
    ]
   },
   {
@@ -278,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "80ed1f17",
+   "id": "a5acdaf4",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6d109363",
+   "id": "c66a446e",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74498309",
+   "id": "65031f53",
    "metadata": {},
    "outputs": [],
    "source": []
