might wipe computer soon

--- a/test_trainer.ipynb
+++ b/test_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "c29cf812",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "807fd72a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "712137e4",
    "metadata": {},
    "outputs": [
@@ -40,24 +40,24 @@
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Greninja \tLv. 100 \tHP: 100.00% \tWater // Dark\n",
-      "[2] Gossifleur \tLv. 100 \tHP: 100.00% \tGrass\n",
-      "[3] Grimmsnarl \tLv. 100 \tHP: 100.00% \tDark // Fairy\n",
-      "[4] Thievul \tLv. 100 \tHP: 100.00% \tDark\n",
-      "[5] Mesprit \tLv. 100 \tHP: 100.00% \tPsychic\n",
-      "[6] Kangaskhan \tLv. 100 \tHP: 100.00% \tNormal\n",
+      "[1] Kadabra \tLv. 100 \tHP: 100.00% \tPsychic\n",
+      "[2] Dustox \tLv. 100 \tHP: 100.00% \tBug // Poison\n",
+      "[3] Florges \tLv. 100 \tHP: 100.00% \tFairy\n",
+      "[4] Gabite \tLv. 100 \tHP: 100.00% \tDragon // Ground\n",
+      "[5] Chinchou \tLv. 100 \tHP: 100.00% \tWater // Electric\n",
+      "[6] Milotic \tLv. 100 \tHP: 100.00% \tWater\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Tapu Koko \tLv. 100 \tHP: 100.00% \tElectric // Fairy\n",
-      "[2] Glaceon \tLv. 100 \tHP: 100.00% \tIce\n",
-      "[3] Beartic \tLv. 100 \tHP: 100.00% \tIce\n",
-      "[4] Deino \tLv. 100 \tHP: 100.00% \tDark // Dragon\n",
-      "[5] Terrakion \tLv. 100 \tHP: 100.00% \tRock // Fighting\n",
-      "[6] Blastoise \tLv. 100 \tHP: 100.00% \tWater\n",
+      "[1] Oshawott \tLv. 100 \tHP: 100.00% \tWater\n",
+      "[2] Gastrodon \tLv. 100 \tHP: 100.00% \tWater // Ground\n",
+      "[3] Duskull \tLv. 100 \tHP: 100.00% \tGhost\n",
+      "[4] Florges \tLv. 100 \tHP: 100.00% \tFairy\n",
+      "[5] Zorua \tLv. 100 \tHP: 100.00% \tDark\n",
+      "[6] Stufful \tLv. 100 \tHP: 100.00% \tNormal // Fighting\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n"
      ]
@@ -70,44 +70,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e3aa712b",
+   "execution_count": 4,
+   "id": "469d537f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hydro Pump\n",
-      "Double-Edge\n",
-      "Double-Edge\n",
-      "Fire Blast\n",
-      "Hydro Pump\n",
-      "Fire Blast\n",
-      "Double-Edge\n",
-      "Fire Blast\n",
-      "Double-Edge\n",
+      "Blue Flare\n",
+      "Boomburst\n",
+      "Sludge Bomb\n",
+      "Twister\n",
+      "Boomburst\n",
+      "Sludge Bomb\n",
+      "Iron Tail\n",
+      "Boomburst\n",
+      "Boomburst\n",
+      "Blue Flare\n",
+      "Judgement\n",
+      "Sludge Bomb\n",
+      "Blue Flare\n",
+      "Boomburst\n",
+      "Boomburst\n",
+      "Blue Flare\n",
+      "Boomburst\n",
+      "Sludge Bomb\n",
+      "Blue Flare\n",
+      "Sludge Bomb\n",
+      "Blue Flare\n",
+      "Blue Flare\n",
       "switching\n",
-      "Hydro Pump\n",
-      "Fire Blast\n",
-      "Double-Edge\n",
-      "Double-Edge\n",
-      "Hydro Pump\n",
-      "Double-Edge\n",
-      "Double-Edge\n",
-      "Mystical Fire\n",
-      "Fire Blast\n",
-      "Double-Edge\n",
-      "Double-Edge\n",
-      "Fire Blast\n",
-      "Mystical Fire\n",
-      "Hydro Pump\n",
-      "Hex\n",
-      "Fire Blast\n",
-      "Double-Edge\n",
-      "Double-Edge\n",
-      "switching\n",
-      "Hydro Pump\n"
+      "Iron Tail\n",
+      "Iron Tail\n",
+      "Blue Flare\n",
+      "Iron Tail\n",
+      "Twister\n",
+      "Judgement\n",
+      "Iron Tail\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "003cb841",
    "metadata": {},
    "outputs": [
@@ -125,18 +125,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85.8\n",
-      "85.8\n",
-      "39.0\n",
-      "144.0\n",
-      "30.0\n",
-      "45.0\n",
-      "0.19972067039106142\n",
-      "0.19972067039106142\n",
-      "0.09078212290502793\n",
-      "0.33519553072625696\n",
-      "0.06983240223463687\n",
-      "0.10474860335195531\n"
+      "120.0\n",
+      "120.0\n",
+      "202.8\n",
+      "62.400000000000006\n",
+      "168.0\n",
+      "140.4\n",
+      "0.14749262536873156\n",
+      "0.14749262536873156\n",
+      "0.24926253687315636\n",
+      "0.07669616519174041\n",
+      "0.20648967551622419\n",
+      "0.17256637168141592\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "bdb8774a",
    "metadata": {},
    "outputs": [
@@ -163,29 +163,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "#########################  Tapu Koko  ##########################\n",
+      "##########################  Oshawott  ##########################\n",
       "\n",
-      "Level 100 \tElectric // Fairy \t(F)\n",
-      "Nature : Relaxed | Up - Def, Down - Spe\n",
-      "HP  : \t283.00/283.00 \t100.00%\n",
-      "Atk : \t323.00\n",
-      "Def : \t198.00\n",
-      "Sp.A: \t234.00\n",
-      "Sp.D: \t194.00\n",
-      "Spe : \t266.40\n",
+      "Level 100 \tWater \t(N)\n",
+      "Nature : Quiet | Up - SpA, Down - Spe\n",
+      "HP  : \t256.00/256.00 \t100.00%\n",
+      "Atk : \t152.00\n",
+      "Def : \t115.00\n",
+      "Sp.A: \t187.00\n",
+      "Sp.D: \t97.00\n",
+      "Spe : \t121.50\n",
       "\n",
-      "#####################  Tapu Koko's Moves  ######################\n",
+      "######################  Oshawott's Moves  ######################\n",
       "\n",
-      "[1] Fire Blast\tFire\t5/5 PP\n",
-      "[2] Hydro Pump\tWater\t5/5 PP\n",
-      "[3] Hex\tGhost\t10/10 PP\n",
-      "[4] Double-Edge\tNormal\t15/15 PP\n",
-      "[5] Flame Charge\tFire\t20/20 PP\n",
-      "[6] Mystical Fire\tFire\t10/10 PP\n",
+      "[1] Iron Tail\tSteel\t15/15 PP\n",
+      "[2] Judgement\tNormal\t10/10 PP\n",
+      "[3] Blue Flare\tFire\t5/5 PP\n",
+      "[4] Twister\tDragon\t20/20 PP\n",
+      "[5] Boomburst\tNormal\t10/10 PP\n",
+      "[6] Sludge Bomb\tPoison\t10/10 PP\n",
       "\n",
       "################################################################\n",
       "This Pokémon was initialized on\n",
-      "=== Fri 23 Jun 2023 @ 17:57:27 UTC\n",
+      "=== Sun 25 Jun 2023 @ 21:58:47 UTC\n",
       "=== In the MST timezone.\n",
       "=== It was randomized by Boxes!\n",
       "################################################################\n"
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5e43a7dd",
    "metadata": {},
    "outputs": [
@@ -206,9 +206,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fight fight fight switch switch fight switch switch fight switch switch fight switch fight fight switch switch switch switch switch fight fight fight fight switch switch fight switch switch switch fight fight fight fight fight fight fight fight fight switch fight switch fight fight switch switch fight fight fight switch \n",
-      "28\n",
-      "22\n"
+      "switch fight switch switch switch switch fight fight fight fight fight fight fight switch fight fight switch fight fight switch switch fight switch fight switch fight fight switch fight fight fight switch fight fight switch fight fight switch switch switch fight switch switch switch switch fight fight switch switch switch \n",
+      "26\n",
+      "24\n"
      ]
     }
    ],
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a5acdaf4",
+   "id": "74b5107e",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c66a446e",
+   "id": "2349061b",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65031f53",
+   "id": "adc5e43e",
    "metadata": {},
    "outputs": [],
    "source": []
