--- a/test_trainer.ipynb
+++ b/test_trainer.ipynb
@@ -40,24 +40,24 @@
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Kadabra \tLv. 100 \tHP: 100.00% \tPsychic\n",
-      "[2] Dustox \tLv. 100 \tHP: 100.00% \tBug // Poison\n",
-      "[3] Florges \tLv. 100 \tHP: 100.00% \tFairy\n",
-      "[4] Gabite \tLv. 100 \tHP: 100.00% \tDragon // Ground\n",
-      "[5] Chinchou \tLv. 100 \tHP: 100.00% \tWater // Electric\n",
-      "[6] Milotic \tLv. 100 \tHP: 100.00% \tWater\n",
+      "[1] Deino \tLv. 100 \tHP: 100.00% \tDark // Dragon\n",
+      "[2] Tympole \tLv. 100 \tHP: 100.00% \tWater\n",
+      "[3] Eelektross \tLv. 100 \tHP: 100.00% \tElectric\n",
+      "[4] Ivysaur \tLv. 100 \tHP: 100.00% \tGrass // Poison\n",
+      "[5] Walrein \tLv. 100 \tHP: 100.00% \tIce // Water\n",
+      "[6] Minior \tLv. 100 \tHP: 100.00% \tRock // Flying\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n",
       "//////////////////////// Party Pokémon /////////////////////////\n",
       "////////////////////////////////////////////////////////////////\n",
-      "[1] Oshawott \tLv. 100 \tHP: 100.00% \tWater\n",
-      "[2] Gastrodon \tLv. 100 \tHP: 100.00% \tWater // Ground\n",
-      "[3] Duskull \tLv. 100 \tHP: 100.00% \tGhost\n",
-      "[4] Florges \tLv. 100 \tHP: 100.00% \tFairy\n",
-      "[5] Zorua \tLv. 100 \tHP: 100.00% \tDark\n",
-      "[6] Stufful \tLv. 100 \tHP: 100.00% \tNormal // Fighting\n",
+      "[1] Heracross \tLv. 100 \tHP: 100.00% \tBug // Fighting\n",
+      "[2] Snover \tLv. 100 \tHP: 100.00% \tGrass // Ice\n",
+      "[3] Gothitelle \tLv. 100 \tHP: 100.00% \tPsychic\n",
+      "[4] Lilligant \tLv. 100 \tHP: 100.00% \tGrass\n",
+      "[5] Araquanid \tLv. 100 \tHP: 100.00% \tWater // Bug\n",
+      "[6] Inteleon \tLv. 100 \tHP: 100.00% \tWater\n",
       "\n",
       "////////////////////////////////////////////////////////////////\n"
      ]
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "469d537f",
    "metadata": {},
    "outputs": [
@@ -78,36 +78,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blue Flare\n",
-      "Boomburst\n",
-      "Sludge Bomb\n",
-      "Twister\n",
-      "Boomburst\n",
-      "Sludge Bomb\n",
-      "Iron Tail\n",
-      "Boomburst\n",
-      "Boomburst\n",
-      "Blue Flare\n",
-      "Judgement\n",
-      "Sludge Bomb\n",
-      "Blue Flare\n",
-      "Boomburst\n",
-      "Boomburst\n",
-      "Blue Flare\n",
-      "Boomburst\n",
-      "Sludge Bomb\n",
-      "Blue Flare\n",
-      "Sludge Bomb\n",
-      "Blue Flare\n",
-      "Blue Flare\n",
+      "Aeroblast\n",
+      "Sandstorm\n",
+      "Max Ooze (S)\n",
       "switching\n",
-      "Iron Tail\n",
-      "Iron Tail\n",
-      "Blue Flare\n",
-      "Iron Tail\n",
-      "Twister\n",
-      "Judgement\n",
-      "Iron Tail\n"
+      "Headbutt\n",
+      "Headbutt\n",
+      "Headbutt\n",
+      "Aeroblast\n",
+      "Aeroblast\n",
+      "Aeroblast\n",
+      "Spikes\n",
+      "Max Ooze (S)\n",
+      "Spikes\n",
+      "Aeroblast\n",
+      "Spikes\n",
+      "Aeroblast\n",
+      "switching\n",
+      "Headbutt\n",
+      "Max Ooze (S)\n",
+      "Max Ooze (S)\n",
+      "Geomancy\n",
+      "Aeroblast\n",
+      "Aeroblast\n",
+      "Aeroblast\n",
+      "Aeroblast\n",
+      "Sandstorm\n",
+      "Max Ooze (S)\n",
+      "Max Ooze (S)\n",
+      "Spikes\n",
+      "Aeroblast\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "bdb8774a",
    "metadata": {},
    "outputs": [
@@ -163,30 +163,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "##########################  Oshawott  ##########################\n",
+      "#########################  Heracross  ##########################\n",
       "\n",
-      "Level 100 \tWater \t(N)\n",
-      "Nature : Quiet | Up - SpA, Down - Spe\n",
-      "HP  : \t256.00/256.00 \t100.00%\n",
-      "Atk : \t152.00\n",
-      "Def : \t115.00\n",
-      "Sp.A: \t187.00\n",
-      "Sp.D: \t97.00\n",
-      "Spe : \t121.50\n",
+      "Level 100 \tBug // Fighting \t(N)\n",
+      "Nature : Sassy | Up - SpD, Down - Spe\n",
+      "HP  : \t318.00/318.00 \t100.00%\n",
+      "Atk : \t322.00\n",
+      "Def : \t220.00\n",
+      "Sp.A: \t116.00\n",
+      "Sp.D: \t234.30\n",
+      "Spe : \t182.70\n",
       "\n",
-      "######################  Oshawott's Moves  ######################\n",
+      "#####################  Heracross's Moves  ######################\n",
       "\n",
-      "[1] Iron Tail\tSteel\t15/15 PP\n",
-      "[2] Judgement\tNormal\t10/10 PP\n",
-      "[3] Blue Flare\tFire\t5/5 PP\n",
-      "[4] Twister\tDragon\t20/20 PP\n",
-      "[5] Boomburst\tNormal\t10/10 PP\n",
-      "[6] Sludge Bomb\tPoison\t10/10 PP\n",
+      "[1] Headbutt\tNormal\t15/15 PP\n",
+      "[2] Aeroblast\tFlying\t5/5 PP\n",
+      "[3] Geomancy\tFairy\t10/10 PP\n",
+      "[4] Spikes\tGround\t20/20 PP\n",
+      "[5] Max Ooze (S)\tPoison\t3/3 PP\n",
+      "[6] Sandstorm\tRock\t5/5 PP\n",
       "\n",
       "################################################################\n",
       "This Pokémon was initialized on\n",
-      "=== Sun 25 Jun 2023 @ 21:58:47 UTC\n",
-      "=== In the MST timezone.\n",
+      "=== Sat 30 Sep 2023 @ 19:21:05 UTC\n",
+      "=== In the EDT timezone.\n",
       "=== It was randomized by Boxes!\n",
       "################################################################\n"
      ]
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
